# flock-artifact

./: .dockerignore  .gitignore  Dockerfile.aws  Dockerfile.ubuntu  README.md
certs/: client.key  frelay-key.pem
certs/0/: key.pem
certs/1/: key.pem
certs/2/: cert.pem  key.pem
certs/frelay/: cert.pem
certs/user1/: user-key.pem
certs/user1/0/: cert.pem
certs/user1/1/: key.pem
certs/user1/2/: key.pem
client/: auth_u2f.py  config.py  cost.py  custom_style.py  figure_latency.py  figure_throughput.py  invoke.py  latency.py  latency_baseline.sh  latency_flock.sh  requirements.txt  sharding_helper.py  test_tcp.py  throughput.py  throughput_baseline.sh  throughput_flock.sh  tufte.py
client/output/: pir-pk.txt  pir-sk.txt  pk-user1.txt  sk-user1.txt
deploy/: deploy_all.sh  deploy_aws.py  deploy_aws.sh  deploy_azure.py  deploy_fargate.py  deploy_gcp.py  deploy_gcp.sh  entry_script.sh  requirements.txt
figures_archive/: latency_freshness_retrieve_file.pgf  latency_legend.pgf  latency_pir.pgf  latency_sharding_recover.pgf  latency_signing_sign.pgf  throughput.pgf
files/: comparison256.txt  preparams.txt  signing_keyshard_aws.txt  signing_keyshard_azure.txt  signing_keyshard_gcp.txt  xor128.txt
handlers/: .gitignore  build-baseline  handler.py  handler_baseline.py  handler_lambda.py  handler_tcptest.py  handler_util.py  requirements.txt  storage.py
internal/: go.mod  go.sum
internal/cmd/signing/: main.go
internal/cmd/signing/certs/: client.pem
internal/networking/: comm.go  util.go
internal/signing/: keygen.go  signing-util.go  signing.go
mpcauth/: .dockerignore  .gitignore  CMakeLists.txt  README.md  vcpkg.json
mpcauth/apps/: aes_ctr.cpp  auth_passcode_2PC.cpp  auth_passcode_3PC.cpp  auth_passcode_test.cpp  create_authshare_2PC.cpp  create_authshare_3PC.cpp  sharding.cpp
mpcauth/data/: shard1.json  shard1_gt.json  shard2.json  shard2_gt.json  shard3.json  shard3_gt.json
mpcauth/emp-agmpc/: CMakeLists.txt
mpcauth/emp-agmpc/emp-agmpc/: cmpc_config.h  netmp.h  netmp_old.h
mpcauth/emp-agmpc/test/: aes.cpp  main.cpp
mpcauth/emp-ot/: CMakeLists.txt
mpcauth/emp-tool/: CMakeLists.txt
mpcauth/emp-tool/cmake/: emp-base.cmake
mpcauth/emp-tool/emp-tool/io/: io_channel.h  net_io_channel.h
mpcauth/emp-tool/emp-tool/net/: client.h
mpcauth/tests/: test_aes.cpp  test_agmpc.cpp  test_in_out.cpp  test_json.cpp  test_router.cpp  test_sharding.cpp
mpcauth/utils/: aes.h  authshare_builder.h  base64.cpp
pir/: BUILD  WORKSPACE  base64_utils.cc  base64_utils.h  bazel-bin  bazel-out  bazel-pir  bazel-testlogs  client_gen_pir_requests.cc  client_handle_pir_responses.cc  dense_run.cc  server_handle_pir_requests.cc  test_pir.py
relay/: Makefile  README.md  dockerfile  go.mod  go.sum  start_relay.sh
relay/certs/: frelay-ca.pem
relay/certs/0/: cert.pem
relay/certs/1/: cert.pem
relay/certs/frelay/: key.pem
relay/certs/user1/: user-ca.pem
relay/certs/user1/0/: key.pem
relay/certs/user1/1/: cert.pem
relay/certs/user1/2/: cert.pem
relay/clib/: client.h
relay/client/: client_func.go
relay/cmd/admin/: admin.go
relay/cmd/admin/cmd/: create.go  root.go
relay/cmd/relay/: relay.go
relay/cmd/relay/cmd/: root.go  start.go
relay/config/: config.go
relay/docs/: Flock-relay-design.pptx
relay/hack/: test.cpp
relay/hack/old/: certs.sh  client_function.go
relay/pkg/api/: admin.go  api.go
relay/pkg/api/client-ssl/: client.go
relay/pkg/client/: client.go  tls.go
relay/pkg/core/: relay.go
relay/pkg/server/: auth.go  config.go  ctrl.go  dataplane.go  forwarder.go  http.go
relay/pkg/store/: store.go
relay/pkg/util/: utils.go
relay/scripts/: throughput.sh
util/: crypto_util.py  pir_util.py
